fixed line wrap and deleted some comments from css

--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -25,8 +25,8 @@
   margin: 1rem 0 1rem 0;
   color: var(--clr-primary);
 }
+
 .gallery__card{
-  
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -40,6 +40,7 @@
   text-decoration: none;
   text-transform: capitalize;
 }
+
 .gallery__card:hover {
   background: var(--clr-accent);
   transition: 0.5s ease-out;
@@ -47,25 +48,31 @@
 .gallery__card:hover > .card__title {
   color: var(--clr-gray);
 }
+
 .gallery__img{
   opacity: 0.5;
   height: 20rem;
   width: 50rem;
-  object-fit: cover;
-    
+  object-fit: cover;  
 }
+
 .gallery__img2{
   opacity: 1;
   transition: all 0.3s ease-out;
   cursor: pointer;
 }
+
 .technical__container{
   display: flex;
   flex-direction: column;
 }
+
 .ship__txt{
   text-align: center;
+  padding: 0rem 0 3rem 0;
 }
+
+
 /* MODAL */
 .modal__gallery{
   display: grid;
@@ -89,7 +96,7 @@
   transform: scale(1.1);}
 
 .modal{
-  background:    #0d3b66f6;
+  background:#0d3b66f6;
   position:fixed;
   top:0;
   left:0;
@@ -101,7 +108,9 @@
 
 .modal.open{
   opacity: 1;
-  pointer-events: all;}
+  pointer-events: all;
+}
+
 .modal__img-container{
   position: absolute;
   height: 100%;
@@ -111,42 +120,46 @@
   transform: translate(-50% , -50%) ;
   display: flex;
   flex-direction: column;
-align-items: center;
-justify-content: center;
+ align-items: center;
+ justify-content: center;
 }
-.modal__full-img {
 
-  /* position: absolute; */
+.modal__full-img {
   object-fit: cover;
   max-height: 75%;
   top: 50%;
   left:50% ;
   transform: scale(0.5) ;
-  transition: all 0.5s ease-out;}
+  transition: all 0.5s ease-out;
+}
 
-.modal__full-img.open { transform:  scale(1) ;}
+.modal__full-img.open{ 
+  transform:  scale(1) ;
+}
 
 .modal p {
   position: relative;
   color: var(--clr-white) ;
   font-size: var(--fs-body);
-  text-transform: capitalize;}
+  text-transform: capitalize;
+}
 
-  /* position: absolute;
-  bottom: 4%;
-  left : 50% ;
-  transform: translate(-50% , -4%);} */
 .modal__btn{
   position: absolute;
   top: 5%;
   right : 5% ;
   transform: translate(-10% , -10%);
 }
+
+
 /* MEDIA QUERIES */
 @media(min-width: 800px){
   .ship__txt{
     text-align: left;
-  }
+    padding: 6rem 0 6rem 0;
+    white-space: pre-line;
+}
+  
   .technical__container{
     flex-direction: row;
   }
